--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
-    "react": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "swiper": "^11.1.3",
     "tailwind-merge": "^2.3.0",
